--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,11 +19,11 @@ jobs:
           # 创建临时目录
           mkdir -p release
           # 复制指定的 PDF 文件到临时目录
-          cp "詞彙表/南寧白話分類詞表.pdf" release/
-          cp "詞彙表/現代漢語詞彙南寧白話和亭子平話讀音表.pdf" release/
-          cp "同音字表/南宁白话入门.pdf" release/
-          cp "同音字表/南寧白話單字讀音表.pdf" release/
-          cp "同音字表/南寧亭子平話單字讀音表.pdf" release/
+          cp "./詞彙表/南寧白話分類詞表.pdf" release/
+          cp "./詞彙表/現代漢語詞彙南寧白話和亭子平話讀音表.pdf" release/
+          cp "./同音字表/南宁白话入门.pdf" release/
+          cp "./同音字表/南寧白話單字讀音表.pdf" release/
+          cp "./同音字表/南寧亭子平話單字讀音表.pdf" release/
           # 创建说明文件
           echo "此處存放自動生成的 PDF 文件，始終爲最新版本。" > release/README.txt
           # 创建 zip 文件，文件名包含版本号
