--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,17 +28,16 @@ jobs:
           VERSION=$(date +'%Y%m%d')
           # 创建临时目录
           mkdir -p release
-          # 复制指定的 PDF 文件到临时目录
-          cp "詞彙表/南寧白話分類詞表.pdf" release/
-          cp "詞彙表/現代漢語詞彙南寧白話和亭子平話讀音表.pdf" release/
-          cp "同音字表/南宁白话入门.pdf" release/
-          cp "同音字表/南寧白話單字讀音表.pdf" release/
-          cp "同音字表/南寧亭子平話單字讀音表.pdf" release/
-          # 创建说明文件
-          echo "此處存放自動生成的 PDF 文件，始終爲最新版本。" > release/README.txt
+          # 复制指定的 tsv 文件到临时目录
+          cp "詞彙表/南寧白話分類詞表.tsv" release/
+          cp "詞彙表/現代漢語詞彙南寧白話和南寧亭子平話讀音表.tsv" release/
+          cp "同音字表/南寧白話單字讀音表.tsv" release/
+          cp "同音字表/南寧白話同音字表.tsv" release/
+          cp "同音字表/南寧亭子平話單字讀音表.tsv" release/
+          cp "同音字表/南寧亭子平話同音字表.tsv" release/
           # 创建 zip 文件，文件名包含版本号
           cd release
-          zip -r "../nanning-dialect-manual_v${VERSION}.zip" .
+          zip -r "../TSV版-${VERSION}.zip" .
           cd ..
 
       - name: Create Release
@@ -48,14 +47,29 @@ jobs:
           tag_name: v${{ github.event.repository.default_branch }}-${{ github.sha }}
           name: Release v${{ github.event.repository.default_branch }}-${{ github.sha }}
           body: |
-            此處存放自動生成的 PDF 文件，始終爲最新版本。
+            此處存放自動壓縮的 TSV 文件和手工上傳的 PDF 文件，始終爲最新版本。
             
-            包含以下文件：
+            TSV 壓縮包包含以下文件：
+            - 南寧白話分類詞表.tsv
+            - 現代漢語詞彙南寧白話和南寧亭子平話讀音表.tsv
+            - 南寧白話單字讀音表.tsv
+            - 南寧白話同音字表.tsv
+            - 南寧亭子平話單字讀音表.tsv
+            - 南寧亭子平話同音字表.tsv
+
+            PDF 壓縮包包含以下文件：
             - 南寧白話分類詞表.pdf
+            - 實用南寧白話分類詞表.pdf
             - 現代漢語詞彙南寧白話和亭子平話讀音表.pdf
-            - 南宁白话入门.pdf
             - 南寧白話單字讀音表.pdf
+            - 南寧白話同音字表.pdf
             - 南寧亭子平話單字讀音表.pdf
+            - 南寧亭子平話同音字表.pdf
+            - 南寧白話、亭子平話與廣州話三語對照字表.pdf
+            - 南宁白话入门.pdf
+
+            更新內容：1.增加詞彙表；2.修訂字音表和分類詞表；3.完善pdf顯示。
+            待解決問題：部分生僻字在pdf顯示有問題，有待解決。
           files: nanning-dialect-manual_v${{ github.event.repository.default_branch }}-${{ github.sha }}.zip
           generate_release_notes: true
           draft: false
