--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,12 +27,19 @@ jobs:
           # 创建目录
           New-Item -ItemType Directory -Force -Path "build"
           
+          # 收集並檢查PDF
+          $pdfs = Get-ChildItem -File -Filter *.pdf
+          if (-not $pdfs) {
+            Write-Error "No PDF files found in the repository root.";
+            exit 1
+          }
+          
           # 复制所有PDF文件
-          Get-ChildItem *.pdf | Copy-Item -Destination "build\"
+          $pdfs | Copy-Item -Destination "build\" -Force
           
           # 打包为ZIP
-          Compress-Archive -Path "build\*.pdf" -DestinationPath "build\PDF-$date.zip"
-        working-directory: PDF
+          Compress-Archive -Path "build\*.pdf" -DestinationPath "build\PDF-$date.zip" -Force
+        
 
       - name: Delete old ZIP files
         run: |
@@ -44,7 +51,7 @@ jobs:
               Remove-Item -Path $file.FullName -Force
             }
           }
-        working-directory: PDF
+        
 
       - name: Create Release
         id: create_release
@@ -58,7 +65,7 @@ jobs:
             更新內容：
             1. 修訂字音表；2. 修訂詞表；3. 完善PDF顯示
             待解決問題：部分生僻字和下標字符在PDF顯示有問題，有待解決
-          files: PDF\build\PDF-${{ steps.date.outputs.date }}.zip
+          files: build\PDF-${{ steps.date.outputs.date }}.zip
           generate_release_notes: true
           draft: false
           prerelease: false
