--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,10 +63,12 @@ jobs:
           name: Release latest
           body: |
             此處存放自動生成的 ZIP 壓縮包，始終爲最新版本。
-
+            
             更新內容：
             1. 修訂字音表；2. 修訂詞表；3. 完善PDF顯示
-            待解決問題：部分生僻字和下標字符在PDF顯示有問題，有待解決
+            
+            待解決問題：
+            部分生僻字和下標字符在PDF顯示有問題，有待解決
           files: build/PDF-${{ steps.date.outputs.date }}.zip
           overwrite_files: true
           fail_on_unmatched_files: true
